# kvserver

./: Makefile  pyproject.toml
kvserver/: client.py  server.py
